--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -2,13 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ubirouting.ubimapdemo.MainActivity" >
 
-    <com.ubirouting.ubimaplib.View.UbiMapView
+    <com.ubirouting.ubimaplib.UbiMapView
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
